tests/auto/corelib/json/tst_qtjson.cpp
@@ -1985,11 +1985,11 @@ void tst_QtJson::testDebugStream()
         // QJsonObject
 
         QJsonObject object;
-        QTest::ignoreMessage(QtDebugMsg, "QJsonObject() ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonObject()");
         qDebug() << object;
 
         object.insert(QLatin1String("foo"), QLatin1String("bar"));
-        QTest::ignoreMessage(QtDebugMsg, "QJsonObject({\"foo\": \"bar\"}) ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonObject({\"foo\": \"bar\"})");
         qDebug() << object;
     }
 
@@ -1997,12 +1997,12 @@ void tst_QtJson::testDebugStream()
         // QJsonArray
 
         QJsonArray array;
-        QTest::ignoreMessage(QtDebugMsg, "QJsonArray() ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonArray()");
         qDebug() << array;
 
         array.append(1);
         array.append(QLatin1String("foo"));
-        QTest::ignoreMessage(QtDebugMsg, "QJsonArray([1,\"foo\"]) ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonArray([1,\"foo\"])");
         qDebug() << array;
     }
 
@@ -2010,19 +2010,19 @@ void tst_QtJson::testDebugStream()
         // QJsonDocument
 
         QJsonDocument doc;
-        QTest::ignoreMessage(QtDebugMsg, "QJsonDocument() ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonDocument()");
         qDebug() << doc;
 
         QJsonObject object;
         object.insert(QLatin1String("foo"), QLatin1String("bar"));
         doc.setObject(object);
-        QTest::ignoreMessage(QtDebugMsg, "QJsonDocument({\"foo\": \"bar\"}) ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonDocument({\"foo\": \"bar\"})");
         qDebug() << doc;
 
         QJsonArray array;
         array.append(1);
         array.append(QLatin1String("foo"));
-        QTest::ignoreMessage(QtDebugMsg, "QJsonDocument([1,\"foo\"]) ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonDocument([1,\"foo\"])");
         doc.setArray(array);
         qDebug() << doc;
     }
@@ -2032,36 +2032,36 @@ void tst_QtJson::testDebugStream()
 
         QJsonValue value;
 
-        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(null) ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(null)");
         qDebug() << value;
 
         value = QJsonValue(true); // bool
-        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(bool, true) ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(bool, true)");
         qDebug() << value;
 
         value = QJsonValue((double)4.2); // double
-        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(double, 4.2) ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(double, 4.2)");
         qDebug() << value;
 
         value = QJsonValue((int)42); // int
-        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(double, 42) ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(double, 42)");
         qDebug() << value;
 
         value = QJsonValue(QLatin1String("foo")); // string
-        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(string, \"foo\") ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(string, \"foo\")");
         qDebug() << value;
 
         QJsonArray array;
         array.append(1);
         array.append(QLatin1String("foo"));
         value = QJsonValue(array); // array
-        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(array, QJsonArray([1,\"foo\"]) ) ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(array, QJsonArray([1,\"foo\"]) )");
         qDebug() << value;
 
         QJsonObject object;
         object.insert(QLatin1String("foo"), QLatin1String("bar"));
         value = QJsonValue(object); // object
-        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(object, QJsonObject({\"foo\": \"bar\"}) ) ");
+        QTest::ignoreMessage(QtDebugMsg, "QJsonValue(object, QJsonObject({\"foo\": \"bar\"}) )");
         qDebug() << value;
     }
 }
